# cargo-light

./: Cargo.toml  LICENSE.md  README.md  example.rs
.cargo/: config
src/: main.rs
