[package]
name = "cargo-light"
version = "0.1.0"
authors = ["Fisher Darling <fdarlingco@gmail.com>"]
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities", "development-tools", "development-tools::cargo-plugins", "parsing"]
keywords = ["cargo", "plugin", "statistics"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
syn = {version="*", features=["parsing", "printing", "clone-impls", "full", "extra-traits", "visit", "fold"]}
clap = "*"
proc-macro2 = {version="*"}
colored = "*"
walkdir = "2"
